--- a/board/pom.xml
+++ b/board/pom.xml
@@ -67,6 +67,15 @@
 			<optional>true</optional>
 		</dependency>
 		
+		<!-- lombok -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
+		</dependency>
+		
+		
+		
 	</dependencies>
 
 	<build>
